--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tiptap/react": "^3.10.2",
     "@tiptap/starter-kit": "^3.10.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.5",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
