feat(notes): implement rich text note editor and notes library
- Added a rich text note editor using Tiptap, allowing users to create and edit notes with various formatting options.
- Implemented a notes library page to display user notes, including features for searching, filtering, and managing notes.
- Integrated Hebrew localization for all new strings related to note management.
- Created a comprehensive tracking system to streamline story implementation and status updates.
- Updated documentation to reflect new features and usage guidelines.

Closes Story 6.1 and prepares for Story 6.2 (Epic 6).

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.80.0",
     "@tabler/icons-react": "^3.35.0",
+    "@tiptap/extension-placeholder": "^3.10.4",
     "@tiptap/react": "^3.10.2",
     "@tiptap/starter-kit": "^3.10.2",
     "@types/react-syntax-highlighter": "^15.5.13",
