--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "check-all": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
