--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "3.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.9.3",
