Implement Dark Mode Infrastructure and Complete Agent Guides
- Added Story 0.6 for dark mode infrastructure, ensuring 100% coverage across all application pages and components.
- Introduced Story 0.15 to track future enhancements for dark mode visual polish and theme toggle restoration.
- Completed new guides for agents, including "מדריך אגנטים - חלק 4ב" and "מדריך אגנטים - חלק 5," marking the agents series as fully complete.
- Updated `0X-STORIES-SUMMARY.md` to reflect the latest story statuses and added new entries for dark mode and agent guides.
- Enhanced UI components to support dark mode, ensuring a consistent user experience across themes.
- Verified all changes for functionality and resolved any TypeScript errors, preparing the features for production.

--- a/bmad/bmm/config.yaml
+++ b/bmad/bmm/config.yaml
@@ -14,5 +14,5 @@ tea_use_mcp_enhancements: false
 # Core Configuration Values
 user_name: Ben
 communication_language: English
-document_output_language: English
+document_output_language: Hebrew
 output_folder: '{project-root}/docs'
